--- a/package.json
+++ b/package.json
@@ -1,20 +1,46 @@
 {
-  "name": "my-storybook",
-  "private": true,
-  "version": "0.0.0",
+  "name": "jmp-custom-components",
+  "private": false,
+  "version": "0.0.1-rc1",
   "type": "module",
+  "main":"dist/index.js",
+  "typings":"dist/index.d.ts",
+  "keywords": [
+    "react",
+    "dev",
+    "jesus",
+    "merino",
+    "curso"
+  ],
+  "license": "MIT",
+  "homepage": "http://ejemplodehomepagedelpaquete.com",
+  "repository": {
+    "url": "https://",
+    "type": "git"
+  },
+  "files": [
+    "dist"
+  ],
+  "release": {
+    "branches": [
+      "main"
+    ]
+  },
+  "peerDependencies": {
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build-tsc": "npm run clean && tsc && npm run copyfiles",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "npx chromatic --project-token=chpt_8aa396e027bc920"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "chromatic": "npx chromatic --project-token=chpt_8aa396e027bc920",
+    "clean": "rimraf dist/",
+    "copyfiles": "copyfiles -u 1 src/**/*.css dist/"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.5.0",
@@ -32,10 +58,14 @@
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "chromatic": "^11.5.4",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.8.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rimraf": "^5.0.7",
     "storybook": "^8.1.10",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
