url git modificada

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "homepage": "http://ejemplodehomepagedelpaquete.com",
   "repository": {
-    "url": "https://",
+    "url": "https://github.com/jesmerin0/jmp-custom-components",
     "type": "git"
   },
   "files": [
