--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": false,
   "version": "0.0.1-rc1",
   "type": "module",
-  "main":"dist/index.js",
-  "typings":"dist/index.d.ts",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "keywords": [
     "react",
     "dev",
@@ -40,7 +40,8 @@
     "build-storybook": "storybook build",
     "chromatic": "npx chromatic --project-token=chpt_8aa396e027bc920",
     "clean": "rimraf dist/",
-    "copyfiles": "copyfiles -u 1 src/**/*.css dist/"
+    "copyfiles": "copyfiles -u 1 src/**/*.css dist/",
+    "push:npm":"np"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.5.0",
@@ -63,6 +64,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.8.0",
+    "np": "^10.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.7",
